syntax = "proto3";

package com.example.grpc.objects;

message GreetRequest {
    string name =1;
}

message GreetReply {
    string name =1;
}
service GreetService {
    rpc SayHello ( GreetRequest) returns (  GreetReply) {}
}